# shElter-v3

./: .gitattributes  .gitignore  QWEN.md  README.md  RUN.md  backend-migration-feasibility-report.md  batch_fix.py  check_garbled.py  convert_line_endings.ps1  docker-compose.yml  fix_admin_articles.py  fix_all.py  fix_chinese_encoding.js  fix_css.py  fix_encoding.py  fix_frontend_legacy_chinese.js  fix_garbled.py  fix_line_endings.ps1  fix_specific_issues.js  quick_fix.py  run-backend.bat  start-frontend.bat  start-servers.bat  start_project.py
.qwen/commands/: speckit.analyze.toml  speckit.checklist.toml  speckit.clarify.toml  speckit.constitution.toml  speckit.implement.toml  speckit.plan.toml  speckit.specify.toml  speckit.tasks.toml  speckit.taskstoissues.toml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  constitution-template.md  plan-template.md  (+2 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  alembic.ini  generate_keys.py  pyproject.toml  requirements.txt  risk_assessment_report.md  risk_management_report.md  security_scan.py  test_import.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_init.py  002_update_user.py  003_add_audit_logs.py  038a7382afda_add_is_approved_column_to_articles_table.py  5b5e1bdc0b95_v1_integration_schema_v2.py
backend/scripts/: copy_music_files.py  create_admin.py  migrate_v1_content.py  migrate_v1_users.py  verify_full_system.py  verify_integration.py
backend/security_reports/: scan_20260221_094022.json
backend/src/: config.py  main.py
backend/src/api/: __init__.py  admin.py  articles.py  auth.py  categories.py  comments.py  connections.py  media.py  metro.py  moderation.py  music.py  search.py  tags.py  users.py
backend/src/auth/: __init__.py  jwt.py  permissions.py
backend/src/core/: response.py  security.py
backend/src/database/: __init__.py  connection.py
backend/src/models/: __init__.py  article.py  audit_log.py  category.py  comment.py  connection.py  junction.py  metro.py  music.py  revision.py  tag.py  user.py
backend/src/schemas/: __init__.py  admin.py  article.py  category.py  comment.py  common.py  connection.py  metro.py  music.py  tag.py  user.py
backend/src/services/: audit.py
backend/src/utils/: __init__.py  errors.py  helpers.py  logging.py
backend/tests/: conftest.py  test_articles.py  test_articles_fixed.py  test_auth.py  test_integration.py
docs/: 00_requirment.md  A0-项目需求与版本规划文档.md
frontend/: .dockerignore  .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-legacy/: API_GUIDE.md  admin-articles.html  admin-comments.html  admin-dashboard.html  admin-moderation.html  admin-users.html  api-client.js  api-examples.js  article-detail.html  articles.html  categories.html  category-articles.html  config.js  create-article.html  edit-article.html  index.html  login.html  metro.html  music.html  nav-component.js  package-lock.json  profile.html  register.html  search.html  styles.css  tag-articles.html  test-router.html  user-profile.html  utils.js
文档/: 项目需求文档.md
(+64 files in other folders)
