[project]
name = "wiki-platform-backend"
version = "1.1.0"
description = "Wiki Platform Backend API with article management, user profiles, and social features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.0.1",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "httpx==0.26.0",
    "slowapi==0.1.9",
    "idna==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "flake8==7.0.0",
    "isort==5.13.2",
    "safety>=3.2.11",
    "bandit>=1.9.3",
    "mypy==1.8.0",
    "types-python-jose>=3.3.4",
    "types-requests>=2.31.0",
]
postgres = [
    "psycopg2-binary==2.9.9",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
